--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
   "type": "commonjs",
   "main": "script.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "npx rollup -c -w"
   },
   "devDependencies": {
     "rollup": "^4.46.2"
